k8s/21-rabbitmq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guamanmorales-rabbitmq
  namespace: guamanmorales
  labels:
    app: guamanmorales-rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: guamanmorales-rabbitmq
  template:
    metadata:
      labels:
        app: guamanmorales-rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3-management-alpine
          ports:
            - containerPort: 5672
              name: amqp
            - containerPort: 15672
              name: management
          volumeMounts:
            - name: rabbitmq-data
              mountPath: /var/lib/rabbitmq
          readinessProbe:
            tcpSocket:
              port: 5672
            initialDelaySeconds: 60
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 5672
            initialDelaySeconds: 120
            periodSeconds: 15
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "384Mi"
              cpu: "500m"
      volumes:
        - name: rabbitmq-data
          persistentVolumeClaim:
            claimName: guamanmorales-rabbitmq-pvc
