k8s/12-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guamanmorales-postgres-service
  namespace: guamanmorales
spec:
  selector:
    app: guamanmorales-postgres
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
