k8s/17-audit-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guamanmorales-audit-postgres-service
  namespace: guamanmorales
spec:
  selector:
    app: guamanmorales-audit-postgres
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
