k8s/22-rabbitmq-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guamanmorales-rabbitmq-service
  namespace: guamanmorales
spec:
  selector:
    app: guamanmorales-rabbitmq
  ports:
    - name: amqp
      port: 5672
      targetPort: 5672
    - name: management
      port: 15672
      targetPort: 15672
  type: ClusterIP
