k8s/31-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guamanmorales-backend-service
  namespace: guamanmorales
spec:
  selector:
    app: guamanmorales-backend
  ports:
    - port: 3001
      targetPort: 3001
  type: ClusterIP
