k8s/41-audit-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guamanmorales-audit-service
  namespace: guamanmorales
spec:
  selector:
    app: guamanmorales-audit
  ports:
    - port: 3002
      targetPort: 3002
  type: ClusterIP
