k8s/51-dashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guamanmorales-dashboard-service
  namespace: guamanmorales
spec:
  selector:
    app: guamanmorales-dashboard
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
